# distributed-task-dispatch

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  main.cpp  start.sh
ASTs/: example0.json  example1.json
broker/: Dockerfile
broker/src/: CMakeLists.txt  broker.cpp
broker/src/broker-config/: broker_config.cpp  broker_config.h
broker/src/broker-impl/: broker_impl.cpp  broker_impl.h
broker/src/lib/cppzmq/: zmq.hpp
client/: .dockerignore  Dockerfile
client/src/: CMakeLists.txt  client.cpp
client/src/ASTs/: example1.json  example2.json  example3.json
client/src/client-config/: client_config.cpp  client_config.h
client/src/grpc-client/: grpc_client.cpp  grpc_client.h
client/src/proto/: ast_json.proto  computation.proto
common/: CMakeLists.txt
common/communiation/: read_message.h
common/domain/: CMakeLists.txt  domain.cpp  domain.h
common/log_format/: CMakeLists.txt  log_format.h
config/: broker_config.json  client_config.json  manager_config.json  worker_config.json
database/: Dockerfile  data.json  setup_database.py
database/database-client/: CMakeLists.txt  database_client.cpp  database_client.h
database/database-server/: CMakeLists.txt  database_server.cpp
database/database-server/database-server-impl/: database_server.cpp  database_server.h
decomposition/: ast.cpp  ast.h  dag.h  dag_visitor.cpp  expression.cpp  expression.h  expression_visitors.cpp  expression_visitors.h
domain/: domain.cpp  domain.h
manager/: Dockerfile
manager/src/: CMakeLists.txt  manager.cpp
manager/src/decomposition/: dag.h  dag_visitor.cpp  dag_visitor.h  decomposition.cpp  decomposition.h  expression.cpp  expression.h
manager/src/dispatch/: dispatch.cpp  dispatch.h  task_dealer.cpp  task_dealer.h
manager/src/domain/: domain.cpp  domain.h
manager/src/grpc-server/: grpc_server.cpp  grpc_server.h
manager/src/manager-config/: manager_config.cpp  manager_config.h
manager/src/proto/: task.proto
proto/: CMakeLists.txt  computation.proto  db.proto  task.proto  worker.proto
worker/: Dockerfile
worker/src/: CMakeLists.txt  worker.cpp
worker/src/worker-config/: worker_config.cpp  worker_config.h
worker/src/worker-impl/: thread_pool.cpp  thread_pool.h  worker_impl.cpp  worker_impl.h
